--- a/ki-site/package.json
+++ b/ki-site/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "fullpage.js": "^3.0.9",
+    "vue": "^2.6.11",
+    "vue-fullpage.js": "^0.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
