--- a/ki-site/package.json
+++ b/ki-site/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "fullpage.js": "^3.0.9",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-fullpage.js": "^0.1.6"
   },
   "devDependencies": {
