--- a/ki-site/package.json
+++ b/ki-site/package.json
@@ -11,6 +11,8 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "fullpage.js": "^3.0.9",
+    "highcharts": "^8.2.2",
+    "highcharts-vue": "^1.3.5",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-fullpage.js": "^0.1.6"
