--- a/ki-site/package.json
+++ b/ki-site/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.13",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "fullpage.js": "^3.0.9",
