--- a/ki-site/package.json
+++ b/ki-site/package.json
@@ -16,7 +16,8 @@
     "highcharts-vue": "^1.3.5",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
-    "vue-fullpage.js": "^0.1.6"
+    "vue-fullpage.js": "^0.1.6",
+    "vue-scrollmagic": "^1.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
