--- a/ki-site/package.json
+++ b/ki-site/package.json
@@ -14,6 +14,7 @@
     "fullpage.js": "^3.0.9",
     "highcharts": "^8.2.2",
     "highcharts-vue": "^1.3.5",
+    "particles.vue": "^2.1.11",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-fullpage.js": "^0.1.6",
