--- a/ki-site/package.json
+++ b/ki-site/package.json
@@ -18,7 +18,9 @@
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-fullpage.js": "^0.1.6",
-    "vue-scrollmagic": "^1.2.0"
+    "vue-scrollmagic": "^1.2.0",
+    "vue-simple-alert": "^1.1.1",
+    "vue2-simplert-plugin": "^0.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
